--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,12 @@
     <modules>
         <module>nim-common</module>
         <module>nim-service</module>
-        <module>nim-dal</module>
+        <module>nim-dao</module>
         <module>nim-biz</module>
         <module>nim-web</module>
         <module>nim-manager</module>
+        <module>nim-learn</module>
+        <module>nim-api</module>
     </modules>
 
     <parent>
@@ -56,6 +58,21 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector-java.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>2.7.12</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-registry-zookeeper</artifactId>
+                <version>3.0.5</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>3.4.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
