--- a/nim-api/pom.xml
+++ b/nim-api/pom.xml
@@ -16,4 +16,12 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.nanchaos.im</groupId>
+            <artifactId>nim-common</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
