--- a/nim-service/pom.xml
+++ b/nim-service/pom.xml
@@ -17,6 +17,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>cn.nanchaos.im</groupId>
+            <artifactId>nim-api</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.nanchaos.im</groupId>
+            <artifactId>nim-biz</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -29,8 +39,8 @@
             <artifactId>dubbo-registry-zookeeper</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
     </dependencies>
 
