--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <spring-boot-starter-parent.version>2.4.3</spring-boot-starter-parent.version>
         <hutool-all.version>5.7.16</hutool-all.version>
         <mysql-connector-java.version>8.0.27</mysql-connector-java.version>
+        <netty-all.version>4.1.73.Final</netty-all.version>
     </properties>
 
     <dependencies>
@@ -73,6 +74,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>3.4.3</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty-all.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
