--- a/nim-service/src/main/resources/application.yml
+++ b/nim-service/src/main/resources/application.yml
@@ -1,8 +1,17 @@
+spring:
+  application:
+    name: nim-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${spring.datasource.url}
+    username: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+
 dubbo:
   application:
     name: nim-service
   registry:
-    address: zk://ip:2181
+    address: ${dubbo.registry.address}
   protocol:
     port: 20880
   scan:
@@ -13,26 +22,11 @@ mybatis-plus:
     db-config:
       id-type: auto
 
-spring:
-  application:
-    name: nim-service
-  # datasource:
-    #   driver-class-name: com.mysql.cj.jdbc.Driver
-    #   username: username
-    #  password: password
-    #  url: jdbc:mysql://ip:port/nim
-
-nanchaos:
-  cron: "* * * * * ?"
-  # cron: "0 0 5 31 2 ?"
-  enable:
-    scheduling: true
-  dataCrypto:
-    jobOne: ${JOB_ONE:* * * * * ?}
-    jobTwo: ${JOB_TWO:* * * * * ?}
-
-nim:
-  server:
-    UDP-PORT: ${NIM_SERVER_UDP_PORT:7901}
-    TCP-PORT: ${NIM_SERVER_TCP_PORT:8901}
-    WEBSOCKET-PORT: ${NIM_SERVER_WEBSOCKET_PORT:3000}
+# apollo
+app:
+  id: nim
+apollo:
+  meta: http://124.223.113.25:8080
+  config-service: http://124.223.113.25:8080
+  bootstrap:
+    enabled: true
